# elf0

./: .bandit  .coverage  .env.example  .gitignore  .pre-commit-config.yaml  .windsurfrules  CLAUDE.md  DEPENDENCIES.md  LICENSE  Makefile  PROJECT_IMPROVEMENT_ANALYSIS.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: docs.yml  release.yml  test.yml
docs/: agent_patterns.md  docs_code_principles.md  feature_dir_glob.md  feature_specs_tidy.md  feature_youtube_transcript_mcp.md  notes_elf_sdk.md  notes_fix_agent_principles.md  notes_fix_agent_principles_cust_graph.md  notes_fix_function_principles.md  plan_dir_glob.md  plan_opensource-min.md  plan_opensource.md  plan_specs_tidy.md  plan_tui_refactor.md  plan_youtube_transcript_mcp.md
docs/features/: feature_claude.md  feature_claude_code_integration.md  feature_functions-01.md  feature_terminal_interactive.md  feature_tui_refactor.md
docs/notes/: notes_business_strategy.md  notes_claude_code.md  notes_fix_multistep_workflow.md  notes_function_calling.md  notes_predict_plan.md  notes_sim_improvements-02.md  notes_simulation.md  notes_specs_tidy.md  notes_user_feedback.md
docs_ai/: feature_referencing.md  flow_rules.md  mcp_guide.md  notes.md  notes_fix_multistep_workflow.md  project_overview.md  project_tasks.md  pydantic_docs.md  testing_principles.md
docs_ai/features/: feature_mcp.md  feature_mcp_integration.md  feature_python_tools.md  feature_react_pattern.md
docs_ai/notes/: notes_consciousness.md  notes_predict_plan-02.md  notes_refactor.md  notes_sim_improvements.md  notes_user_feedback.md
docs_specs/: spec_principles.md  spec_schema.md  spec_structure.md  workflow_schema.md
mcp/calculator/: pyproject.toml  server.py
mcp/youtube-transcript/: README.md  pyproject.toml  server.py
specs/: agent-creator-01.yaml  agent-creator.yaml  agent-flow.yaml  agent-linkedin-01.yaml  agent-optimizer.yaml  agent-simulation.yaml  agent-twitter-01.yaml  agent-twitter-01_improved.yaml  basic_chat.yaml  basic_reasoning-02.yaml  basic_reasoning.yaml  ollama_coder.yaml  ollama_optimizer.yaml  orchestration_workers.yaml  prompt_chaining.yaml  prompt_optimizer.yaml  prompt_reasoning.yaml  prompt_routing.yaml  yaml_creator.yaml  yaml_doc_creator.yaml  yaml_optimizer.yaml  youtube_analyzer.yaml
specs/archive/: agent-creator-01.yaml  agent-creator-02.yaml  agent-simulation.yaml  agent-twitter-01.yaml  agent_simulation.yaml  basic_chat.yaml  claude_code_example.yaml  claude_sonnet_example.yaml  interactive_assistant.yaml  mcp_workflow.yaml  ollama_optimizer.yaml  orchestration_workers.yaml  prompt_optimizer.yaml  prompt_routing_with_reference.yaml  python_calculator.yaml  python_function_test.yaml  simple_mcp.yaml  simulation_scenario_v1.yaml
specs/basic/: chat_simple_v1.yaml  reasoning_structured_v1.yaml
specs/code/: claude_code_review.yaml
specs/content/: content_basic_v1.yaml  linkedin_post.yaml  twitter_post.yaml  youtube_analyzer_v2.yaml
specs/examples/: claude_code_self_improvement.yaml  claude_sonnet_example.yaml  interactive_assistant.yaml  mcp_workflow.yaml  ollama_chat.yaml  ollama_coder.yaml  prompt_chaining.yaml  prompt_routing.yaml  prompt_routing_with_reference.yaml  python_calculator.yaml  python_function_test.yaml  python_text_processor.yaml  simple_math_workflow.yaml  simple_mcp.yaml
specs/utils/: agent_creator.yaml  agent_optimizer.yaml  agent_simulation.yaml  creator_workflow_v1.yaml  creator_workflow_v2.yaml  optimizer_prompt_v1.yaml  optimizer_prompt_v2.yaml  optimizer_yaml_v1.yaml  simulation_scenario_v1.yaml
src/awa/: cli.py
src/awa/core/: compiler.py  config.py  errors.py  llm_client.py  llm_integration.py  models.py  runner.py  spec.py  workflow_executor.py  workflow_loader.py  workflow_model.py
src/awa/utils/: yaml_loader.py
src/elf/: cli.py
src/elf/core/: compiler.py  config.py  exceptions.py  function_loader.py  llm_client.py  mcp_client.py  runner.py  spec.py
src/elf/data/: models.json
src/elf/functions/: __init__.py  utils.py
src/elf/utils/: file_utils.py  yaml_loader.py
src/elf0/: cli.py
src/elf0/core/: compiler.py  config.py  input_collector.py  input_state.py  llm_client.py  runner.py  spec.py
tests/cli/: test_cli.py  test_list_specs.py
tests/core/: test_anthropic.py  test_claude_code_integration.py  test_compiler.py  test_mcp_client.py  test_mcp_integration.py  test_mcp_node.py  test_mcp_workflow_integration.py  test_python_functions.py  test_referencing_integration.py  test_spec.py  test_spec_referencing.py  test_structured_output.py
tests/integration/: test_mcp_end_to_end.py
tests/utils/: test_yaml_loader.py
workflows/: basic_chat.yaml  prompt_optimizer.yaml
(+8 files in other folders)
