[project]
name = "elf"
version = "0.1.0"
description = "sElf improving single file agent structures"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.4.3",
    "openai>=1.78.1",
    "pydantic>=2.11.4",
    "pyyaml>=6.0.2",
    "typer>=0.15.3",
    "python-dotenv>=1.0.0",
    "rich>=14.0.0",
    "anthropic>=0.51.0",
    "mcp[cli]>=1.9.1",
]

[project.scripts]
elf = "elf.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
test = [
]

