[project]
name = "youtube-transcript-mcp"
version = "0.1.0"
description = "YouTube Transcript MCP Server for Elf0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "youtube-transcript-api>=1.1.0",
]

[project.scripts]
youtube-transcript-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
